<resources>
    <string name="app_name">电费助手</string>
    <string name="please_input_this_hint">请输入本次电表数据</string>
    <string name="please_input_wrong_hint">电表数据未更新或者不正确</string>

    <string name="last_month_balance_format">上次%s余额:%.2f 元</string>
    <string name="last_month_format">上次%s电表读数:%.2f 度</string>

    <string name="last_month_balance">上次电表余额：</string>
    <string name="this_month_balance">本次电表余额：</string>

    <string name="last_month">上次电表读数：</string>
    <string name="this_month">本次电表读数：</string>
    <string name="main_ammeter">总表</string>
    <string name="use">本次总表用电：</string>
    <string name="total_price">本次总表电费：</string>
    <string name="degree"> 度</string>
    <string name="yuan"> 元</string>

    <string name="save">保存并关闭</string>
    <string name="save_and_clear">保存并复制</string>
    <string name="clear">清空数据</string>
    <string name="history">历史结算</string>
    <string name="default_value">0度</string>
    <string name="make_ok">开始计算</string>
    <string name="share">分享</string>
    <string name="edit">编辑</string>
    <string name="waiting">请等待…</string>

    <string name="use_sub">本次分表用电：</string>

    <string name="public_use">人均公摊电量：</string>
    <string name="price">本次电费单价：</string>
    <string name="private_use_price_sub">本次分表电费：</string>
    <string name="public_use_price_sub">本次公摊电费：</string>
    <string name="total_price_sub">本次合计电费：</string>
    <string name="modify_name_success">租户名成功修改</string>
    <string name="modify_name">修改租户名</string>
    <string name="name_err">租户名太短</string>
    <string name="name_max_length">租户名不能超过4个字</string>
    <string name="check_out">退租</string>
    <string name="title_payment">缴费金额</string>
    <string name="set_balance">更新余额</string>
    <string name="title_balance">本次余额</string>
    <string name="ammeter">电表</string>
    <string name="un_set">未设置</string>
    <string name="set">已设置</string>
    <string name="set_ammeter">更新电表</string>
    <string name="used_ammeter">已用电量</string>
    <string name="title_ammeter">电表读数</string>
    <string name="please_input_payment_hint">请输入本次缴费金额</string>
    <string name="please_input_balance_hint">请输入%s的余额</string>
    <string name="please_input_ammeter_hint">请输入%s的电表读数</string>
    <string name="new_ammeter_hint">请输入新用户房间电表数据！</string>
    <string name="balance">余额</string>
    <string name="recharge_payment">充值缴费</string>
    <string name="settlement_history">结算记录</string>
    <string name="payment_record">缴费记录</string>
    <string name="ammeter_check_in">租客入住</string>
    <string name="my_tenant">我的租客</string>
    <string name="settlement_success">结算成功！</string>
    <string name="settlement_init">初始数据</string>
    <string name="settlement">抄表结算</string>
    <string name="submit_settlement">确认数据</string>
    <string name="number_0">0</string>
    <string name="number_9">9</string>
    <string name="number_8">8</string>
    <string name="number_7">7</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="delete">删除</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="dot">.</string>
    <string name="deleteAll">清空</string>
    <string name="format">%.2f</string>
    <string name="format_yuan">%.2f 元</string>
    <string name="format_du">%.2f 度</string>
    <string name="success_set_payment">成功缴费:金额%.2f 元</string>
    <string name="success_set_balance">本次余额:%.2f 元</string>
    <string name="success_set_ammeter">电表数据:%.2f 度</string>
    <string name="success_new_ammeter">新户入住成功，电表当前为%.2f 度</string>
    <string name="only_10_count">最多只支持十位数输入</string>
    <string name="save_2_decimal">小数点后最多支持输入两位数</string>
    <string name="no_need_to_info_total">没有需要结算的金额，是否去补充缴费记录？</string>
    <string name="check_out_info_total">当前还有%.2f 元费用没有结算，确认是否强制退租？</string>
    <string name="check_out_info">当前租户还欠费%.2f 元，是否已经结清？</string>
    <string name="check_out_cant_restore">是否确定要退租，退租后不可恢复！</string>
    <string name="check_out_success">租户退租成功！</string>
    <string name="time_long">请更新%s的电表数据，已超过24小时未更新。</string>
    <string name="balance_time_long">请更新%s的余额数据，已超过24小时未更新。</string>
    <string name="sub_ammeter">分表</string>
    <string name="add_tenant_hint">当前暂无租户资料，请先进行租户入住操作</string>
    <string name="no_need_to">暂时没有需要结算的数据\n请确认余额和电量以及充值情况正确</string>
    <string name="please_input_data">请录入主表余额和各表数据</string>
    <string name="please_input_recharge">请记得录入每次的充值缴费</string>
    <string name="please_input_main_balance">请输入主表本次余额</string>
    <string name="please_input_main_ammeter">请输入主表电表读数</string>
    <string name="please_input_main_data">总表数据输入</string>
</resources>