<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewData"
            type="com.cody.ammeter.viewmodel.ItemAmmeter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/ItemCardView"
            bind:cardCornerRadius="@dimen/dimen_huge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_normal"
                android:background="@color/color1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/itemStart"
                        android:textSize="@dimen/ui_font_biggest"
                        android:padding="@dimen/dimen_smallest"
                        android:layout_centerVertical="true"
                        android:text="@{viewData.name}"
                        tools:text="春哈春哈" />

                    <TextView
                        style="@style/itemEnd"
                        android:layout_centerVertical="true"
                        tools:text="@string/set"
                        android:textStyle="bold"
                        android:text="@{viewData.validData ?@string/set:@string/un_set}" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_smallest">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/last_month" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="204353度"
                        android:text='@{String.format("%.2f度",viewData.oldAmmeter)}' />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/this_month" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="204353度"
                        android:text='@{String.format("%.2f度",viewData.newAmmeter)}' />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/use" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="20度"
                        android:layout_gravity="end"
                        android:text='@{String.format("%.2f度",(viewData.newAmmeter-viewData.oldAmmeter))}' />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/public_use" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f度",viewData.sharing)}'
                        tools:text="22.34 度" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/price" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f元/度",viewData.price)}'
                        tools:text="22.34元/度" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/total_price" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f元",(viewData.price * (viewData.newAmmeter - viewData.oldAmmeter)))}'
                        tools:text="22.34 元" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>