<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="ammeter"
            type="com.cody.ammeter.AmmeterViewData" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:minEms="2"
                    android:text="@{ammeter.name}"
                    android:textSize="40sp"
                    tools:text="春" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="gone"
                    android:visibility="@{ammeter.subMeter?View.GONE:View.VISIBLE}"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/last_month" />

                        <TextView
                            style="@style/itemNumber"
                            android:text='@{ammeter.lastMonth + " 度"}'
                            tools:text="22.34 度" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/this_month" />

                        <TextView
                            style="@style/itemNumber"
                            android:text='@{ammeter.thisMonth + " 度"}'
                            tools:text="22.34 度" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/use" />

                        <TextView
                            style="@style/itemNumber"
                            android:text='@{ammeter.kilowattHour + " 度"}'
                            tools:text="22.34 度" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/public_use" />

                        <TextView
                            style="@style/itemNumber"
                            android:text='@{ammeter.publicPrice + " 度"}'
                            tools:text="22.34 度" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/total_price" />

                        <TextView
                            style="@style/itemNumberBig"
                            android:text='@{ammeter.totalPrice + " 元"}'
                            tools:text="22.34 元" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:visibility="visible"
                    android:visibility="@{ammeter.subMeter?View.VISIBLE:View.GONE}"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/last_month_sub" />

                        <TextView
                            style="@style/itemNumber"
                            android:text='@{ammeter.lastMonth + " 度"}'
                            tools:text="23.47 度" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/this_month_sub" />

                        <EditText
                            style="@style/itemNumber"
                            android:hint="@string/please_input_ammeter_hint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@={ammeter.thisMonth}"
                            android:textColorHint="#999999"
                            android:autofillHints="@string/please_input_ammeter_hint" />

                        <TextView
                            style="@style/itemTitleBig"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/degree" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/itemTitle"
                            android:text="@string/use_sub" />

                        <TextView
                            android:id="@+id/kilowattHour"
                            style="@style/itemNumberBig"
                            android:text="@string/default_value"
                            tools:text="23.23 度" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>