<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewData"
            type="com.cody.component.handler.livedata.StringLiveData" />

        <variable
            name="hint"
            type="java.lang.String" />

        <variable
            name="unit"
            type="java.lang.String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:onClick="@{onClickListener::onClick}"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            style="@style/itemHorizontal"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/uiColorPrimaryDark"
                android:textSize="@dimen/ui_font_biggest"
                tools:text="@string/new_ammeter_hint"
                android:text="@{hint}"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="50sp"
                android:textColor="@color/uiColorGray3"
                android:text="@{viewData + unit}"
                tools:text="845632.88度" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <Button
                android:id="@+id/number_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_1"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintRight_toLeftOf="@id/number_2"
                bind:layout_constraintTop_toTopOf="parent"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_2"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_1"
                bind:layout_constraintRight_toLeftOf="@id/number_3"
                bind:layout_constraintTop_toTopOf="parent"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_3"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_2"
                bind:layout_constraintRight_toLeftOf="@id/delete"
                bind:layout_constraintTop_toTopOf="parent"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_largest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/delete"
                bind:layout_constraintBottom_toBottomOf="@id/number_3"
                bind:layout_constraintLeft_toRightOf="@id/number_3"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="@id/number_3"
                bind:layout_constraintWidth_percent="0.28" />

            <Button
                android:id="@+id/deleteAll"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_largest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/deleteAll"
                bind:layout_constraintBottom_toBottomOf="@id/number_6"
                bind:layout_constraintLeft_toRightOf="@id/number_3"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="@id/number_6"
                bind:layout_constraintWidth_percent="0.28" />

            <Button
                android:id="@+id/number_4"
                android:layout_width="0dp"
                android:textSize="@dimen/ui_font_hugest"
                android:layout_height="0dp"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_4"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintRight_toLeftOf="@id/number_5"
                bind:layout_constraintTop_toBottomOf="@id/number_1"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_5"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_4"
                bind:layout_constraintRight_toLeftOf="@id/number_6"
                bind:layout_constraintTop_toBottomOf="@id/number_1"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_6"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_5"
                bind:layout_constraintRight_toLeftOf="@id/delete"
                bind:layout_constraintTop_toBottomOf="@id/number_1"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_7"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintRight_toLeftOf="@id/number_8"
                bind:layout_constraintTop_toBottomOf="@id/number_4"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_8"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_7"
                bind:layout_constraintRight_toLeftOf="@id/number_9"
                bind:layout_constraintTop_toBottomOf="@id/number_4"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_9"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toRightOf="@+id/number_8"
                bind:layout_constraintRight_toLeftOf="@id/delete"
                bind:layout_constraintTop_toBottomOf="@id/number_4"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/dot"
                bind:layout_constraintDimensionRatio="W,7:8"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintRight_toLeftOf="@id/number_8"
                bind:layout_constraintTop_toBottomOf="@id/number_7"
                bind:layout_constraintWidth_percent="0.22" />

            <Button
                android:id="@+id/number_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_hugest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/number_0"
                bind:layout_constraintBottom_toBottomOf="@id/dot"
                bind:layout_constraintLeft_toLeftOf="@id/number_8"
                bind:layout_constraintRight_toRightOf="@+id/number_9"
                bind:layout_constraintTop_toTopOf="@id/dot" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/ui_font_largest"
                style="@style/Widget.AppCompat.Button.Colored"
                bind:onClickListener="@{onClickListener}"
                android:text="@string/ui_str_done"
                bind:layout_constraintBottom_toBottomOf="@id/dot"
                bind:layout_constraintLeft_toRightOf="@+id/number_9"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="@id/number_9"
                bind:layout_constraintWidth_percent="0.28" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>