<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewData"
            type="com.cody.ammeter.viewmodel.ItemAmmeter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/ItemCardView"
            bind:cardCornerRadius="@dimen/dimen_smallest">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_normal"
                android:background="@color/color1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/itemStart"
                        android:textSize="@dimen/ui_font_biggest"
                        android:padding="@dimen/dimen_smallest"
                        android:layout_centerVertical="true"
                        android:text="@{viewData.name}"
                        tools:text="春哈春哈" />

                    <TextView
                        style="@style/itemEnd"
                        android:layout_centerVertical="true"
                        tools:text="@string/set"
                        android:textStyle="bold"
                        android:text="@{viewData.validData ?@string/set:@string/un_set}" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal"
                    android:background="@drawable/ic_dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/use_sub" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="204353.33 度"
                        android:text='@{String.format("%.2f 度",(viewData.newAmmeter-viewData.oldAmmeter))}' />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/total_price_sub" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f 元",(viewData.price * (viewData.sharing + viewData.newAmmeter - viewData.oldAmmeter)))}'
                        tools:text="22.34 元" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal"
                    android:background="@drawable/ic_dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/public_use_price_sub" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f 元",(viewData.price * viewData.sharing))}'
                        tools:text="22.34 元" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/private_use_price_sub" />

                    <TextView
                        style="@style/itemEnd"
                        android:text='@{String.format("%.2f 元",viewData.price * (viewData.newAmmeter - viewData.oldAmmeter))}'
                        tools:text="22.34 元" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal"
                    android:background="@drawable/ic_dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/this_month" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="204353.45"
                        android:text='@{String.format("%.2f 度",viewData.newAmmeter)}' />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/itemStart"
                        android:text="@string/last_month" />

                    <TextView
                        style="@style/itemEnd"
                        tools:text="204353.45"
                        android:text='@{String.format("%.2f 度",viewData.oldAmmeter)}' />

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>